fixed scroll (success before heading was visible)

--- a/src/app/scroll/scroll.component.css
+++ b/src/app/scroll/scroll.component.css
@@ -37,10 +37,8 @@
 
 .target-area{
     position: fixed;
-    bottom: 20%;
-    top: 20%;
     width: 100%;
-    height: 60%; 
+    height: 50%; 
     z-index: -1;
 }
 
